<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/tb_responsavel_editarpaciente_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/tb_responsavel_editarpaciente_apelido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tb_responsavel_editarpaciente_nome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/apelido"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/tb_responsavel_editarpaciente_telefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tb_responsavel_editarpaciente_apelido"
        android:layout_below="@+id/tb_responsavel_editarpaciente_email"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/telefone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/tb_responsavel_editarpaciente_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tb_responsavel_editarpaciente_apelido"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/bt_responsavel_editarpaciente_validar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tb_responsavel_editarpaciente_telefone"
        android:layout_alignRight="@+id/tb_responsavel_editarpaciente_telefone"
        android:layout_below="@+id/tb_responsavel_editarpaciente_telefone"
        android:layout_marginTop="20dp"
        android:text="@string/validar" />

</RelativeLayout>
