<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/text_configuracao_dadospaciente_dadosPaciente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/dadosPaciente"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text_configuracao_dadospaciente_dadosPaciente"
        android:layout_marginTop="25dp"
        android:src="@drawable/barra_azul" />

    <EditText
        android:id="@+id/tb_configuracao_dadospaciente_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/tb_configuracao_dadospaciente_apelido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tb_configuracao_dadospaciente_nome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/apelido"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/tb_configuracao_dadospaciente_telefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tb_configuracao_dadospaciente_apelido"
        android:layout_below="@+id/tb_configuracao_dadospaciente_mail"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/telefone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/tb_configuracao_dadospaciente_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tb_configuracao_dadospaciente_apelido"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/bt_configuracao_dadospaciente_validar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tb_configuracao_dadospaciente_telefone"
        android:layout_alignRight="@+id/tb_configuracao_dadospaciente_telefone"
        android:layout_below="@+id/tb_configuracao_dadospaciente_telefone"
        android:layout_marginTop="75dp"
        android:text="@string/validar" />

</RelativeLayout>
