<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/text_responsavel_itemtipopacientes_paciente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="10dp"
        android:text="@string/paciente"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/text_responsavel_itemtipopacientes_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_responsavel_itemtipopacientes_paciente"
        android:layout_below="@+id/text_responsavel_itemtipopacientes_paciente"
        android:text="@string/alerta"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/cinzento" />

    <TextView
        android:id="@+id/text_responsavel_itemtipopacientes_telefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_responsavel_itemtipopacientes_email"
        android:layout_below="@+id/text_responsavel_itemtipopacientes_email"
        android:text="@string/rua"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/cinzento" />

    <TextView
        android:id="@+id/text_responsavel_itemtipoalertas_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_responsavel_itemtipopacientes_telefone"
        android:layout_below="@+id/text_responsavel_itemtipopacientes_telefone"
        android:text="@string/data"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/cinzento" />

    <TextView
        android:id="@+id/text_responsavel_itemtipoalertas_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_responsavel_itemtipoalertas_data"
        android:layout_below="@+id/text_responsavel_itemtipoalertas_data"
        android:text="@string/hora"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/cinzento" />

</RelativeLayout>