<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/text_configuracao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/configuracao"
        android:textAppearance="?android:attr/textAppearanceMedium" />

        <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/text_configuracao"
        android:layout_marginTop="22dp" />

    <Button
        android:id="@+id/bt_responsavel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:text="@string/responsavel" />

    <Button
        android:id="@+id/bt_paciente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bt_responsavel"
        android:layout_alignRight="@+id/bt_responsavel"
        android:layout_below="@+id/bt_responsavel"
        android:layout_marginTop="22dp"
        android:text="@string/paciente" />

    <Button
        android:id="@+id/bt_recuperacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_paciente"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/recuperacao" />

</RelativeLayout>
