<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/text_periodicidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/periodicidade"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/text_periodicidade"
        android:layout_marginTop="25dp"
        android:src="@drawable/barra_azul" />

    <TextView
        android:id="@+id/text_noturno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_periodicidade"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="25dp"
        android:text="@string/noturno"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/tb_noturno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/text_noturno"
        android:layout_alignBottom="@+id/text_noturno"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/minutos"
        android:inputType="number"
        android:width="100dp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/text_diurno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_noturno"
        android:layout_below="@+id/tb_noturno"
        android:layout_marginTop="30dp"
        android:text="@string/diurno"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/tb_diurno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/text_diurno"
        android:layout_alignBottom="@+id/text_diurno"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/minutos"
        android:inputType="number"
        android:width="100dp" />

    <TextView
        android:id="@+id/text_aviso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="170dp"
        android:text="@string/avisoPeriodicidade"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
